--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"
+        integrity="sha512-6lLUdeQ5uheMFbWm3CP271l14RsX1xtx+J5x2yeIDkkiBpeVTNhTqijME7GgRKKi6hCqovwCoBTlRBEC20M8Mg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+        integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
     <title>eCommerse</title>
@@ -537,8 +542,8 @@
                 <a class="global-container__btn" href="#">Button</a>
             </div>
 
-            <div class="slider-container">
-                <ul id="autoWidth" class="cs-hidden slider-flex slider-list">
+            <div class="container">
+                <ul class="slider-flex slick">
                     <li>
                         <div class="profil-card">
                             <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
@@ -571,6 +576,40 @@
                             <img class="user-img" src="img/customer-img2.png" alt="Customer" width="48" height="48">
                         </div>
                     </li>
+
+                    <li>
+                        <div class="profil-card">
+                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
+                                smooth as pie. You will get all what you need by writiing a text here “</p>
+                            <h3 class="name">Name and Surname</h3>
+                            <img class="user-img" src="img/customer-img.png" alt="Customer" width="48" height="48">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="profil-card">
+                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
+                                smooth as pie. You will get all what you need by writiing a text here “</p>
+                            <h3 class="name">Name and Surname</h3>
+                            <img class="user-img" src="img/customer-img2.png" alt="Customer" width="48" height="48">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="profil-card">
+                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
+                                smooth as pie. You will get all what you need by writiing a text here “</p>
+                            <h3 class="name">Name and Surname</h3>
+                            <img class="user-img" src="img/customer-img.png" alt="Customer" width="48" height="48">
+                        </div>
+                    </li>
+                    <li>
+                        <div class="profil-card">
+                            <p class="opinion">“ This is an super space for your customers qoute. Don’t worry it works
+                                smooth as pie. You will get all what you need by writiing a text here “</p>
+                            <h3 class="name">Name and Surname</h3>
+                            <img class="user-img" src="img/customer-img2.png" alt="Customer" width="48" height="48">
+                        </div>
+                    </li>
+
 
                 </ul>
             </div>
@@ -841,9 +880,13 @@
 
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+        integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/js/slider.js"></script>
     <script src="js/main.js"></script>
+
 </body>
 
 </html>
